docs(swagger): lengkapi dokumentasi multipart untuk endpoint upload photo dan kegiatan
