# routes/newsRoutes.js
@@ -18,8 +18,65 @@ router.get("/new", /* #swagger.tags = ['News Controller'] */ getNewestNews);
 router.get("/popular", /* #swagger.tags = ['News Controller'] */ getPopularNews);
 router.get("/:id", /* #swagger.tags = ['News Controller'] */ getNewsById);
 
-router.post("/", /* #swagger.tags = ['News Controller'] */ authorizeAdmin, uploadPhotoMiddleware, createNews);
-router.put("/:id", /* #swagger.tags = ['News Controller'] */ authorizeAdmin, uploadPhotoMiddleware, editNews);
+router.post(
+  "/",
+  authorizeAdmin,
+  uploadPhotoMiddleware,
+  /* #swagger.tags = ['News Controller']
+  #swagger.consumes = ['multipart/form-data']
+  #swagger.requestBody = {
+      required: true,
+      content: {
+          "multipart/form-data": {
+              schema: {
+                  type: "object",
+                  properties: {
+                      photo: {
+                          type: "string",
+                          format: "binary",
+                          description: "Upload gambar berita"
+                      },
+                      title: { type: "string" },
+                      subTitle: { type: "string" },
+                      content: { type: "string" },
+                      author: { type: "string" }
+                  },
+                  required: ["title", "subTitle", "content", "author"]
+              }
+          }
+      }
+  }
+  */ createNews,
+);
+router.put(
+  "/:id",
+  authorizeAdmin,
+  uploadPhotoMiddleware,
+  /* #swagger.tags = ['News Controller']
+  #swagger.consumes = ['multipart/form-data']
+  #swagger.requestBody = {
+      required: false,
+      content: {
+          "multipart/form-data": {
+              schema: {
+                  type: "object",
+                  properties: {
+                      photo: {
+                          type: "string",
+                          format: "binary",
+                          description: "Upload gambar berita"
+                      },
+                      title: { type: "string" },
+                      subTitle: { type: "string" },
+                      content: { type: "string" },
+                      author: { type: "string" }
+                  }
+              }
+          }
+      }
+  }
+  */ editNews,
+);
 router.delete("/:id", /* #swagger.tags = ['News Controller'] */ authorizeAdmin, deleteNewsById); // Endpoint hapus berita berdasarkan ID
 router.delete("/", /* #swagger.tags = ['News Controller'] */ authorizeAdmin, deleteAllNews);
 
